# e_commerce

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_iter_in_category_py.html  z_145eef247bfb46b6_lawn_grass_py.html  z_145eef247bfb46b6_product_py.html  z_145eef247bfb46b6_smartphone_py.html  z_36f028580bb02cc8___init___py.html  z_36f028580bb02cc8_conftest_py.html  z_36f028580bb02cc8_test_category_py.html  z_36f028580bb02cc8_test_lawn_grass_py.html  z_36f028580bb02cc8_test_product_py.html  z_36f028580bb02cc8_test_smarthphone_py.html
src/: base_product.py  category.py  exeptions.py  iter_in_category.py  lawn_grass.py  mixin_print.py  product.py  smartphone.py
test/: conftest.py  test_category.py  test_lawn_grass.py  test_mixin_print.py  test_product.py  test_smarthphone.py
