[project]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Anastasiya Shevrina",email = "shevrina@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "^1.16.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"

